--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,21 @@
     <string name="fail_Login_msg">로그인에 실패하였습니다.</string>
     <string name="title_activity_maps">Map</string>
 
+    <!-- Main 메뉴 시작 -->
+    <string name="main_menu_1">스팀세차</string>
+    <string name="main_menu_2">대리 준비중</string>
+    <string name="main_menu_3">카페어링 준비중</string>
+    <string name="main_menu_4">카쉐어링 준비중</string>
+    <string name="customer_point_desc">사용자 포인트 아이콘</string>
+    <string name="customer_name_str">한중석님의 포인트</string>
+    <string name="customer_point_str">32,870</string>
+    <string name="customer_point_arrow_desc">사용자 포인트 화살표 아이콘</string>
+    <string name="car_register_banner_title">지금 차량을 등록하세요!</string>
+    <string name="car_register_banner_description">한번 등록으로 스팀세차 및 대리운전\n서비스를 바로 이용할 수 있어요!</string>
+    <string name="car_register">등록하기</string>
+    <string name="car_register_desc">차량등록 아이콘</string>
+    <!-- Main 메뉴 종료 -->
+
     <!-- 5. 비밀번호 변경 시작 -->
     <string name="title_activity_password_change">비밀번호 변경</string>
 
