--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,8 @@
     <string name="password_change_success">비밀번호 재설정이 완료되었습니다.\n로그인 해주시기 바랍니다.</string>
 
     <!-- 공통 -->
-    <string name="actionbar_back_description">이전버튼</string>
+    <string name="actionbar_prev_icon_description">이전버튼</string>
+    <string name="actionbar_next_icon_description">다음버튼</string>
     <string name="btn_confirm">확인</string>
 
     <!-- 이미지 description -->
@@ -83,6 +84,10 @@
     <!-- 8. 프로필 사진 변경 시작 -->
     <string name="title_profile_photo_change">프로필 사진 변경</string>
     <!-- 8. 프로필 사진 변경 종료 -->
+
+    <!-- 8. 포인트 내역 시작 -->
+    <string name="title_point_history">포인트 내역</string>
+    <!-- 8. 포인트 내역 종료 -->
 
     <!-- 19. 활동 지역 설정 시작 -->
     <string name="title_activity_active_area_settings">내 정보 관리</string>
@@ -112,4 +117,26 @@
     <string name="title_activity_template">템플릿 화면</string>
     <string name="title_activity_profile_photo_change">ProfilePhotoChangeActivity</string>
     <!-- template 종료 -->
+
+    <!-- 추천인 시스템 시작 -->
+    <string name="recommender_system_title">추천인 시스템</string>
+    <string name="q1_str">Q. ‘1촌’이란 무엇인가요?</string>
+    <string name="a1_str">내가 초대한(나를 추천인으로 등록한) 사용자를 의미합니다.</string>
+    <string name="q2_str">Q. ‘2촌’이란 무엇인가요?</string>
+    <string name="a2_str">내가 초대한 1촌 사용자가 초대한 다른 사용자를 의미합니다. 1촌이 늘어날수록 2촌은 기하급수적으로 늘어나겠죠!?</string>
+    <string name="q3_str">Q. 추천인 제도는 무엇인가요?</string>
+    <string name="a3_str">1촌 혹은 2촌 사용자가 서비스 이용할 때 마다, 이용 요금의 일정 금액을 포인트로 페이백 받을 수 있는 제도입니다.</string>
+    <string name="q4_str">Q. 1촌과 2촌의 차이점은 무엇인가요?</string>
+    <string name="a4_str">1촌 사용자와 2촌 사용자가 세차, 대리 등 서비스를 이용를 이용할 때 마다 포인트가 본인에게 적립되는건 동일하지만 1촌 사용자가 서비스 이용 시에 조금 더 높은 비율의 포인트가 적립됩니다.</string>
+    <string name="q5_str">Q.포인트는 어떻게 사용할 수 있나요?</string>
+    <string name="a5_str">포인트는 10,000원 단위로 출금 신청할 수 있으며, 출금 뿐만 아니라 서비스 이용시 할인 수단으로도 사용 가능합니다.</string>
+    <string name="q6_str">Q. ‘친구의 친구’란 무엇인가요?</string>
+    <string name="a6_str">내가 초대한 친구가 초대한(친구를 추천인으로 등록한) 유저를 의미합니다. ‘초대한 친구’가 늘어날수록 ‘친구의 친구’는 기하급수적으로 늘어나겠죠??</string>
+    <string name="q7_str">Q. 추천인 제도는 무엇인가요?</string>
+    <string name="a7_str">‘내가 초대한 친구’ 혹은 ‘친구의 친구’가 서비스 이용할 때 마다, 이용 요금의 일정 금액을 포인트로 페이백 받을 수 있는 제도입니다.</string>
+    <string name="q8_str">Q. ‘내가 초대한 친구’와 ‘친구의 친구’ 차이점은 무엇인가요?</string>
+    <string name="a8_str">‘내가 초대한 친구’(A)와 ‘친구의 친구’(B)가 세차, 대리 등 서비스를 이용를 이용할 때 마다 일정 비율의 포인트가 본인에게 적립되는건 동일하지만 A 친구가 서비스 이용 시에 조금 더 높은 비율의 포인트가 적립됩니다.</string>
+    <string name="q9_str">Q.포인트는 어떻게 사용할 수 있나요? </string>
+    <string name="a9_str">포인트는 10,000원 단위로 출금 신청할 수 있으며, 출금 뿐만 아니라 서비스 이용시 할인 수단으로도 사용 가능합니다.</string>
+    <!-- 추천인 시스템 종료 -->
 </resources>
