--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
 
     <!-- 8. 프로필 사진 변경 시작 -->
     <string name="title_profile_photo_change">프로필 사진 변경</string>
+    <string name="title_profile">프로필</string>
     <!-- 8. 프로필 사진 변경 종료 -->
 
     <!-- 8. 포인트 내역 시작 -->
@@ -146,6 +147,12 @@
     <!-- 24. 알림 및 버전 정보 시작 -->
     <string name="title_activity_push_and_version">알림 및 버전 정보</string>
     <!-- 24. 알림 및 버전 정보 종료 -->
+
+    <!-- 25. 내정보 -->
+    <string name="myinfo_detail_name_title">이름</string>
+    <string name="myinfo_detail_mobile_title">휴대폰 번호</string>
+    <string name="myinfo_detail_password_title">비밀번호</string>
+    <string name="myinfo_detail_password_content">영문, 숫자 혼합 6자리 이상</string>
 
     <!-- template 시작 -->
     <string name="title_activity_template">템플릿 화면</string>
