--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,8 @@
     <string name="title_card_register">카드등록</string>
     <string name="title_coupone">쿠폰</string>
     <string name="title_setting">설정</string>
+    <string name="title_car_manage">차량정보</string>
+    <string name="title_car_register">차량등록</string>
 
     <!-- template 시작 -->
     <string name="title_activity_template">템플릿 화면</string>
