--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,26 @@
     <string name="wash_area_dummy">관악구</string>
     <!-- 대리점 시간 설정 종료 -->
 
+    <!-- 예약 메인 화면 시작 -->
+    <string name="reservation_agent_dummy">관악구 1호점</string>
+    <string name="reservation_date_dummy">9/15(화)</string>
+    <string name="reservation_time_dummy">9:00</string>
+
+    <string name="car_info_title">차량 정보</string>
+    <string name="register_car_not_exist">등록된 차량 없음</string>
+    <string name="car_btn_str_register">등록하기</string>
+    <string name="car_btn_str_modify">변경하기</string>
+
+    <string name="car_name_str">현대산타페 (대형)</string>
+    <string name="car_number_str">35나 8733</string>
+
+    <string name="wash_info_title">세차 장소</string>
+    <string name="wash_indoor">살내</string>
+    <string name="wash_outdoor">실외</string>
+
+    <string name="option_service_title">부가 서비스 (선택)</string>
+    <!-- 예약 메인 화면 종료 -->
+
     <!-- 19. 활동 지역 설정 시작 -->
     <string name="title_activity_active_area_settings">내 정보 관리</string>
     <!-- 21. 활동 지역 설정 종료 -->
