리스트 아이템 이름 변경 부가서비스 리스트 추가 이미지 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,7 @@
     <string name="wash_outdoor">실외</string>
 
     <string name="option_service_title">부가 서비스 (선택)</string>
+    <string name="option_info_desc">부가 서비스 설명</string>
     <!-- 예약 메인 화면 종료 -->
 
     <!-- 19. 활동 지역 설정 시작 -->
