--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,43 @@
     <string name="option_info_desc">부가 서비스 설명</string>
     <!-- 예약 메인 화면 종료 -->
 
+    <!-- 예약 및 결제 시작 -->
+    <string name="payment_title">예약 정보 및 결제</string>
+    <string name="branch_name_title">대리점</string>
+    <string name="branch_name">관악구 1호점</string>
+
+    <string name="wash_address_title">세차 장소</string>
+    <string name="wash_address">송파구 석촌호수로 274 (지상)</string>
+
+    <string name="reservation_time_title">예약 시간</string>
+    <string name="reservation_time">9/15 (화) 14:00</string>
+
+    <string name="amount_title">요금</string>
+
+    <string name="discount_title">할인 수단</string>
+    <string name="discount_coupon">쿠폰</string>
+    <string name="coupon_register">등록하기</string>
+    <string name="discount_point">포인트</string>
+    <string name="amount_default">0원</string>
+    <string name="total_point_use">전액사용</string>
+    <string name="my_point">0원 보유</string>
+
+    <string name="payment_type_title">결제 수단</string>
+    <string name="payment_change">변경하기</string>
+    <string name="payment_type">신용/체크카드</string>
+
+    <string name="cancel_policy_title">취소정책</string>
+    <string name="cancel_policy_btn">자세히</string>
+    <string name="cancel_policy_desc">예약 후, 취소 시점에 따라 수수료가 부과될 수 있습니다. 세부 내용은 자세히 버튼을 눌러 확인해주시기 바랍니다.</string>
+
+    <string name="clause_title">예약 정보 확인 및 모든 약관에 동의합니다</string>
+    <string name="clause_desc1">서비스 이용약관 (필수)</string>
+    <string name="clause_desc2">개인정보 수집 및 이용동의 (필수)</string>
+    <string name="clause_desc3">개인정보 제3자 제공 동의 (필수)</string>
+
+
+    <!-- 예약 및 결제 종료 -->
+
     <!-- 19. 활동 지역 설정 시작 -->
     <string name="title_activity_active_area_settings">내 정보 관리</string>
     <!-- 21. 활동 지역 설정 종료 -->
