0. - 차량등록 후 리턴 부분 추가(등록차량의 기본 세차비용) 1. - 등록차량 조회시 기본 세차비용 추가 2. - 차량 제조사 및 모델명 조회 부분 병합 => 로그인시 데이타 받아오는것으로 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,10 @@
     <string name="input_id_msg">전화번호를 입력하세요.</string>
     <string name="input_pwd_msg">비밀번호를 입력하세요.</string>
 
+    <string name="input_company_name_msg">제조사를 입력하세요.</string>
+    <string name="input_car_name_msg">모델명를 입력하세요.</string>
+    <string name="input_car_number_msg">차량 번호를 입력하세요.</string>
+
     <string name="auto_login_save_msg">로그인 유지가 저장 되었습니다.</string>
     <string name="auto_login_clear_msg">로그인 유지가 해제 되었습니다.</string>
     <string name="success_login_msg">로그인 되었습니다.</string>
