3. - 할인 수단 계산 flow 넣기 4. - 예약 완료 페이지 추가 5. - 예약 페이지 테스트 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
     <!-- 예약 메인 화면 시작 -->
     <string name="reservation_agent_dummy">관악구 1호점</string>
     <string name="reservation_date_dummy">9/15(화)</string>
-    <string name="reservation_time_dummy">9:00</string>
+    <string name="reservation_time_dummy"></string>
 
     <string name="car_info_title">차량 정보</string>
     <string name="register_car_not_exist">등록된 차량 없음</string>
