--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,9 @@
     <string name="input_car_name_msg">모델명를 입력하세요.</string>
     <string name="input_car_number_msg">차량 번호를 입력하세요.</string>
 
+    <string name="input_company_not_msg">제조사를 다시 입력하세요.</string>
+    <string name="input_car_not_msg">모델명를 다시 입력하세요.</string>
+
     <string name="auto_login_save_msg">로그인 유지가 저장 되었습니다.</string>
     <string name="auto_login_clear_msg">로그인 유지가 해제 되었습니다.</string>
     <string name="success_login_msg">로그인 되었습니다.</string>
