3/24(화) 0. - 이미지 전체적으로 체크해서 적해주기. 1. - 로그인 페이지 back 기능 추가 2. - 차량 등록 : 차량 번호 입력 UI 변경 3. - 포인트 입력 : 완료시 계산. 보유 현황은 그대로. 4. - 입력창 커서 맨 뒤로 수정.(포인트 입력, 제조사 및 차량 모델명 입력) 5. - 디자인에 맞게 배경색 조정(전 페이지) 6. - 예약 : 취소 정책 상세 설명 UI 추가 7. - 텍스트 선택시 색상 추가 8. - 약관 청책 UI 추가 9. - 부가 서비스가 없을 때 UI 추가 0. - 예약취소 날짜 안보이는거 수정. 3/25(수) 1. - 회원가입 : 추천인 코드 건너뛰기 기능 구현 2. - 회원가입 : 약관 동의 화면 추가 및 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,11 @@
     <string name="input_company_code_msg">코드를 입력하세요.</string>
     <string name="input_id_msg">전화번호를 입력하세요.</string>
     <string name="input_pwd_msg">비밀번호를 입력하세요.</string>
+    <string name="input_auth_msg">문자 메세지로 전송된 코드를 입력해주세요.</string>
+    <string name="hint_auth_title">코드 입력</string>
+    <string name="error_auth_msg">입력하신 코드가 올바르지 않습니다.\n다시 입력해주세요.</string>
+    <string name="input_recom_msg">추천인 코드를 등록하면 가입 즉시\n5천원 할인쿠폰이 지급돼요!</string>
+    <string name="input_terms_msg">서비스 이용을 위해 약관에 동의해주세요.</string>
 
     <string name="input_company_name_msg">제조사를 입력하세요.</string>
     <string name="input_car_name_msg">모델명를 입력하세요.</string>
@@ -64,13 +69,15 @@
     <!-- 5. 비밀번호 변경 시작 -->
     <string name="title_activity_password_change">비밀번호 변경</string>
 
-    <string name="desc_activity_password_change">변경하실 새 비밀번호를 입력해주세요.\n(영문+숫자 조합 6자리 이상)</string>
+    <string name="desc_activity_password_change">변경하실 새 비밀번호를 입력해주세요.\n(영문+숫자 조합 8자리 이상)</string>
+    <string name="desc_activity_password">비밀번호는 영문+숫자 조합 8자리\n이상으로 설정해주시기 바랍니다.</string>
     <string name="password_change_success">비밀번호 재설정이 완료되었습니다.\n로그인 해주시기 바랍니다.</string>
 
     <!-- 공통 -->
     <string name="actionbar_prev_icon_description">이전버튼</string>
     <string name="actionbar_next_icon_description">다음버튼</string>
     <string name="btn_confirm">확인</string>
+    <string name="btn_next_text">다음</string>
 
     <!-- 이미지 description -->
     <string name="lock_description">Lock 아이콘</string>
@@ -82,8 +89,13 @@
     <string name="hint_password_title">비밀번호</string>
     <string name="member_login">로그인</string>
     <string name="member_join">회원가입</string>
+    <string name="member_join_name">본인 실명</string>
+    <string name="member_join_next">건너뛰기</string>
+    <string name="member_join_recom">추천인 코드</string>
 
     <!-- EditBox hint -->
+    <string name="hint_password1">비밀번호</string>
+    <string name="hint_password2">비밀번호 확인</string>
     <string name="hint_new_password1">새 비밀번호</string>
     <string name="hint_new_password2">새 비밀번호 확인</string>
     <!-- 5. 비밀번호 변경 끝 -->
