--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,10 +52,12 @@
     <string name="title_activity_maps">Map</string>
 
     <!-- Main 메뉴 시작 -->
-    <string name="main_menu_1">스팀세차</string>
-    <string name="main_menu_2">대리 준비중</string>
-    <string name="main_menu_3">카페어링 준비중</string>
-    <string name="main_menu_4">카쉐어링 준비중</string>
+    <string name="main_menu_1">출장스팀세차</string>
+    <string name="main_menu_2">대리운전 준비중</string>
+    <string name="main_menu_3">차량공유 준비중</string>
+    <string name="main_menu_4">승차공유 준비중</string>
+    <string name="main_menu_5">퀵・탁송 준비중</string>
+    <string name="main_menu_6">배달라이더 준비중</string>
     <string name="customer_point_desc">사용자 포인트 아이콘</string>
     <string name="customer_name_str">한중석님의 포인트</string>
     <string name="customer_point_str">32,870</string>
@@ -196,6 +198,8 @@
     <string name="cancel_policy_title">취소정책</string>
     <string name="cancel_policy_btn">자세히</string>
     <string name="cancel_policy_desc">예약 후, 취소 시점에 따라 수수료가 부과될 수 있습니다. 세부 내용은 자세히 버튼을 눌러 확인해주시기 바랍니다.</string>
+    <string name="payment_save_fail">예약이 완료되었으나 정보 저장에 실패하였습니다.\n고객센터 1899-4299로 문의 부탁 드립니다.</string>
+
 
     <string name="clause_title">예약 정보 확인 및 모든 약관에 동의합니다</string>
     <string name="clause_desc1">서비스 이용약관 (필수)</string>
