7. 내정보에서 회원정보(김동현, 전화번호) 위아래 간격 수정. 8. 내정보에서 화살표 크기 변경. 9. 내정보 터치영역 전체로 변경. 0. 내정보에서 고객센터 추가. 1. 추천인 관리 : 01, 02 숫자 및 빨간 글씨는 extrabold체로 수정. 2. 추천인 관리 : 자세히보기 터치영역 넓게 수정. 3. 추천인 관리 : 자세히보기 위쪽 간격 수정. 4. 설정화면 디바이더 컬러 변경. 5. 설정화면 디바이더와 컨텐츠 간격 수정. 6. On/off 버튼 우측으로 이동.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,6 +258,7 @@
 
     <string name="title_use_history">이용 내역</string>
     <string name="title_use_detail">상세 내역</string>
+    <string name="call_center">고객센터 연결하기</string>
 
     <string name="btn_reserve_cancel">예약 취소</string>
     <string name="btn_reserve_next">예약 하기</string>
