--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,11 +54,11 @@
 
     <!-- Main 메뉴 시작 -->
     <string name="main_menu_1">출장스팀세차</string>
-    <string name="main_menu_2">대리운전 준비중</string>
-    <string name="main_menu_3">차량공유 준비중</string>
-    <string name="main_menu_4">승차공유 준비중</string>
+    <string name="main_menu_2">렌터카 준비중</string>
+    <string name="main_menu_3">승차공유 준비중</string>
+    <string name="main_menu_4">대리운전 준비중</string>
     <string name="main_menu_5">퀵・탁송 준비중</string>
-    <string name="main_menu_6">배달라이더 준비중</string>
+    <string name="main_menu_6">차량공유 준비중</string>
     <string name="customer_point_desc">사용자 포인트 아이콘</string>
     <string name="customer_name_str">한중석님의 포인트</string>
     <string name="customer_point_str">32,870</string>
