--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,4 +325,7 @@
 
     <!-- 추천인 관리 -->
     <string name="recomm_manage_str">ㆍ추천인은 최초 등록 후, 절대 변경이 불가합니다.\nㆍ추천인 등록 시 지급되는 5천원 할인쿠폰은 발행일로 부터 14일 이내에 사용 가능합니다.\nㆍ추천인 등록 시, 본인의 코드는 등록할 수 없습니다.\nㆍ본 페이백 시스템의 취지에 맞지 않는 부정 참여가 확인되는 경우 포인트를 회수하거나 참여 제한 등의 조치가 적용 될 수 있습니다.\nㆍ상세 내용은 당사 고객센터 (1899-4299)로 문의주시면 친절하게 안내드립니다.</string>
+
+    <!-- 렌트카 -->
+    <string name="title_rental_detail">상세 정보</string>
 </resources>
