- 결제 완료 페이지 추가 - 메인화면 렌트카 이미지 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
 
     <!-- Main 메뉴 시작 -->
     <string name="main_menu_1">출장스팀세차</string>
-    <string name="main_menu_2">렌터카 준비중</string>
+    <string name="main_menu_2">렌터카</string>
     <string name="main_menu_3">승차공유 준비중</string>
     <string name="main_menu_4">대리운전 준비중</string>
     <string name="main_menu_5">퀵・탁송 준비중</string>
