--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,7 @@
     <string name="reserve_date_title_str">예약일자</string>
     <string name="reserve_dummy_date_str">9/15 (화)</string>
     <string name="map_next_button_str">이 위치로 부름</string>
+    <string name="car_del_acceptBtn_str">위치 지정 완료</string>
 
     <string name="home_btn_desc_str">home button</string>
     <string name="current_icon_desc_str">current button</string>
